fixes lightbox nav z-index

--- a/app/assets/stylesheets/application/lightbox.css.scss
+++ b/app/assets/stylesheets/application/lightbox.css.scss
@@ -21,7 +21,7 @@ $lightbox-control-size: 100px;
 
   @media (min-width: $screen-md-min) {
     position: fixed;
-    z-index: $zindex-navbar-fixed;
+    z-index: 4;
     top: 0;
     left: 0;
     right: 0;
